[DevToolsGM3Colors] Fix invisible code folding triangles.
The application color tokens reference `--sys-color-on-surface-variant`
in a bunch of places, but that is never defined. Instead with the
Material guidelines we have to use `--sys-color-on-surface-subtle`
instead.

Fixed: chromium:1500547
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5007626
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
(cherry picked from commit e2e1f266048b4b958cc030f449eb2b6895622a0e)
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5013614
Bot-Commit: Rubber Stamper <rubber-stamper@appspot.gserviceaccount.com>

--- a/front_end/ui/legacy/applicationColorTokens.css
+++ b/front_end/ui/legacy/applicationColorTokens.css
@@ -15,16 +15,16 @@
   --icon-disabled: var(--sys-color-state-disabled);
   --icon-error: var(--sys-color-error-bright);
   --icon-file-authored: var(--sys-color-orange-bright);
-  --icon-file-default: var(--sys-color-on-surface-variant);
+  --icon-file-default: var(--sys-color-on-surface-subtle);
   --icon-file-document: var(--sys-color-primary-bright);
   --icon-file-font: var(--sys-color-cyan-bright);
   --icon-file-media: var(--sys-color-green-bright);
   --icon-file-image: var(--sys-color-green-bright);
   --icon-file-script: var(--sys-color-orange-bright);
   --icon-file-styles: var(--sys-color-purple-bright);
-  --icon-fold-marker: var(--sys-color-on-surface-variant);
+  --icon-fold-marker: var(--sys-color-on-surface-subtle);
   --icon-folder-authored: var(--sys-color-orange);
-  --icon-folder-primary: var(--sys-color-on-surface-variant);
+  --icon-folder-primary: var(--sys-color-on-surface-subtle);
   --icon-folder-deployed: var(--sys-color-primary-bright);
   --icon-folder-workspace: var(--sys-color-orange);
   --icon-force-white: var(--sys-color-on-tonal-container);
@@ -40,7 +40,7 @@
   --icon-primary: var(--sys-color-primary-bright);
   --icon-record: var(--sys-color-error-bright);
   --icon-request-response: var(--sys-color-primary-bright);
-  --icon-request: var(--sys-color-on-surface-variant);
+  --icon-request: var(--sys-color-on-surface-subtle);
   --icon-security-lock: var(--sys-color-green-bright);
   --icon-css: var(--sys-color-purple-bright);
   --icon-css-hover: var(--sys-color-purple);
